--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This is the code for paper HCRide.
-The code has been simplified and can be run directly by executing "run.py"
+The code can be run directly by executing "run.py"
