--- a/README
+++ b/README
@@ -1,7 +1,42 @@
 # HCRide
 
-## Run Procedure
+**HCRide: Harmonizing Passenger Fairness and Driver Preference for Human-Centered Ride-Hailing**  
+Code and data for the IJCAI-25 paper by Lin Jiang, Yu Yang, and Guang Wang.
+
+---
+
+## 📌 Overview
+
+HCRide is a two-layer decision framework designed to optimize ride-hailing services by balancing passenger fairness and driver preference. This repository includes the full pipeline: dispatch algorithms, simulation environment, and experiment scripts.
+
+---
+
+## 📁 Project Structure
+├── algorithm/ # Core dispatch and sensing algorithms
+├── data/ # Input datasets and preprocessing scripts
+├── run/ # Entry scripts for launching experiments
+├── simulator/ # Simulation environment implementation
+├── test/ # Testing and evaluation scripts
+└── README.md # Project documentation
+
+## 🚀 Getting Started
+
+### 1. Clone the Repository
 ```bash
-cd /path/to/your/project
+git clone https://github.com/your-org/HCRide.git
+cd HCRide
+
+### 2. Install Dependencies
+pip install -r requirements.txt
+
+### 3. Run the Main Pipeline
+cd run
 python run.py
 
+## 🧪 Running Tests
+@inproceedings{jiang2025hcride,
+  title={HCRide: Harmonizing Passenger Fairness and Driver Preference for Human-Centered Ride-Hailing},
+  author={Jiang, Lin and Yang, Yu and Wang, Guang},
+  booktitle={Proceedings of the 34th International Joint Conference on Artificial Intelligence (IJCAI)},
+  year={2025}
+}
